<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tibia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_characters"
            app:destination="@id/nav_characters" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tibia.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_characters"
        android:name="com.example.tibia.ui.CharacterFragment"
        android:label="@string/menu_character"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/nav_highscores"
        android:name="com.example.tibia.ui.Highscores"
        android:label="@string/menu_highscores" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tibia.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>